# mv-playground

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Makefile  README.md
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/backend/src/services/: contract.rs
crates/change_json/: Cargo.toml
crates/change_json/src/: change_json.rs  lib.rs
crates/contract/: Move.toml
crates/contract/sources/: EventProxy.move  ScriptBook.move  TodoList.move
crates/crate_extractor/: Cargo.toml
crates/crate_extractor/src/: cli.rs  load_change.rs  main.rs
crates/sandbox/src/: build_command.rs  lib.rs
move_language_server_crates/base_db/: Cargo.toml
move_language_server_crates/generate_ast/: Cargo.toml
move_language_server_crates/ide/: Cargo.toml
move_language_server_crates/ide/src/: lib.rs
move_language_server_crates/ide_db/: Cargo.toml
move_language_server_crates/ide_diagnostics/: Cargo.toml
move_language_server_crates/move_language_server/: Cargo.toml
move_language_server_crates/move_language_server/src/: main_loop.rs
move_language_server_crates/parser/: Cargo.toml
move_language_server_crates/project_model/: Cargo.toml
move_language_server_crates/project_model/src/: lib.rs  workspace.rs
move_language_server_crates/stdx/: Cargo.toml
move_language_server_crates/stdx/src/: lib.rs
move_language_server_crates/syntax/: Cargo.toml
move_language_server_crates/test_utils/: Cargo.toml
move_language_server_crates/vfs-notify/: Cargo.toml
